--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ p {
   line-height: 22px;
   font-size: 16px;
   font-weight: 300;
+  color: #fff;
 }
 ul {
   padding-left: 0;
@@ -232,7 +233,7 @@ a:hover {
   min-height: 100vh;
 }
 #about {
-  padding: 110px 0;
+  padding: 50px 0;
 }
 #about .block {
   padding: 20px 30px 0 30px;
@@ -244,7 +245,7 @@ a:hover {
   text-transform: uppercase;
 }
 #about .block p {
-  color: #727272;
+  color: #fff;
   font-size: 16px;
   line-height: 28px;
   margin-bottom: 25px;
@@ -252,6 +253,7 @@ a:hover {
 #about .block img {
   max-width: 100%;
 }
+
 .works {
   padding: 80px 0;
   background: #000;
@@ -1099,9 +1101,9 @@ article {
     color:#00aeef;
 }
 #resume:hover {
-    color:#000000;
+    color:#02bdd5;
 }
-.col-md-6{
+#about {
 text-align: justify;
 }
 
@@ -1110,4 +1112,7 @@ text-align: justify;
 }
 .col-sm-4 a{
     font-family: 'Roboto', sans-serif;
+}
+#cover-letter p{
+  line-height: 1.5;
 }
